--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -40,13 +40,15 @@ workflows:
           region: AWS_REGION_ENV_VAR_NAME
           repo: 'rileystech'
           tag: $CIRCLE_PROJECT_REPONAME
-          branches:
-            only:
-              - master
+          filters:
+            branches:
+                only:
+                  - master
       - deploy:
           context: rileystech-deploy
-          branches:
-            only:
-              - master
+          filters:
+            branches:
+              only:
+                - master
           requires:
             - aws-ecr/build-and-push-image
