--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -43,12 +43,12 @@ workflows:
           filters:
             branches:
                 only:
-                  - master
+                  - development
       - deploy:
           context: rileystech-deploy
           filters:
             branches:
               only:
-                - master
+                - development
           requires:
             - aws-ecr/build-and-push-image
